src/components/rich-text-editor/rich-text-editor.scss
@import '/src/assets/scss/variables';

.rich-text-editor {
  width: $page-width;
  min-height: $page-height;

  .ql-container {
    font-size: 18px;

    .ql-editor {
      background-color: $surface-primary;

      strong {
        font-weight: bold;
      }
  
      em {
        font-style: italic;
      }
    }
  }
}

.rich-text-editor::after {
  content: '';
  display: block;
  clear: both;
  height: 15px;

  @media (width >= 768px) {
    height: 30px;
  }
}

